configurable home page banner

--- a/react/assets/forus-webshop/scss/_common/components/_buttons.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_buttons.scss
@@ -85,6 +85,12 @@
                 filter: brightness(5);
             }
         }
+
+        &.button-light-strict {
+            color: #303030 !important;
+            background: #fff !important;
+            border-color: #fff !important;
+        }
     }
 
     &.button-primary-outline {
