--- a/react/assets/forus-webshop/scss/berkelland/components/_buttons.scss
+++ b/react/assets/forus-webshop/scss/berkelland/components/_buttons.scss
@@ -12,7 +12,7 @@
         &:hover {
             color: var(--color-default);
             text-decoration: underline;
-            background-color: var(--bg);
+            background-color: #ececec;
             box-shadow: none;
             border: 1px solid var(--color-default);
         }
