--- a/react/assets/forus-webshop/scss/groningen/components/_buttons.scss
+++ b/react/assets/forus-webshop/scss/groningen/components/_buttons.scss
@@ -21,7 +21,7 @@
 
         &:hover {
             color: var(--color-default);
-            background-color: var(--bg);
+            background-color: #fff;
             box-shadow: none;
             border: 1px solid var(--color-default);
         }
