--- a/react/assets/forus-webshop/scss/style-webshop-berg_en_dal-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-berg_en_dal-vars.scss
@@ -24,7 +24,7 @@ $primaryColorLight: #1B8761;
     --header-banner-pane-banner-background: #fff;
     --header-banner-pane-banner-border-radius: var(--border-radius);
 
-    --bg_2: #fff;
+    --body-background: #fff;
     --border-radius: 0;
     --box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.04), 0px 12px 12px 0px rgba(0, 0, 0, 0.08);
 
