--- a/react/assets/forus-webshop/scss/style-webshop-berkelland-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-berkelland-vars.scss
@@ -39,9 +39,7 @@ $primaryColorLight: #004d93;
     --bc: #4990b5;
 
     // background color
-    --bg: #ececec;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_color: #4e4d40;
