--- a/react/assets/forus-webshop/scss/style-webshop-ede-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-ede-vars.scss
@@ -45,9 +45,7 @@ $primaryColorLight: #3558a2;
     --bc: #3558a2;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #404040;
