--- a/react/assets/forus-webshop/scss/style-webshop-eemsdelta-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-eemsdelta-vars.scss
@@ -47,9 +47,7 @@ $primaryColorLight: #0d4379;
     --bc: #22398e;
 
     // background color
-    --bg: #f5f5f5;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #0d4379;
