--- a/react/assets/forus-webshop/scss/style-webshop-goereeoverflakkee-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-goereeoverflakkee-vars.scss
@@ -39,9 +39,7 @@ $primaryColorLight: #627c18;
     --bc: #627c18;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: #fff;
+    --body-background: #fff;
 
     // footer color
     --footer_background_color: #08749b;
