--- a/react/assets/forus-webshop/scss/style-webshop-hartvanwestbrabant-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-hartvanwestbrabant-vars.scss
@@ -38,9 +38,7 @@ $primaryColorLight: #24a1a1;
     --bc: #24a1a1;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #24a1a1;
