--- a/react/assets/forus-webshop/scss/style-webshop-heumen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-heumen-vars.scss
@@ -38,9 +38,7 @@ $primaryColorLight: #22398e;
     --bc: #22398e;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #22398e;
