--- a/react/assets/forus-webshop/scss/style-webshop-kerstpakket-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-kerstpakket-vars.scss
@@ -39,9 +39,7 @@ $primaryColorLight: #4c74ff;
     --bc: #d13b3b;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #fff;
