--- a/react/assets/forus-webshop/scss/style-webshop-midden_drenthe-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-midden_drenthe-vars.scss
@@ -24,7 +24,7 @@ $primaryColorLight: #b31869;
     --header-banner-pane-banner-background: #fff;
     --header-banner-pane-banner-border-radius: var(--border-radius);
 
-    --bg_2: #fff;
+    --body-background: #fff;
 
     // footer color
     --footer_background_color: #eff2f5;
