--- a/react/assets/forus-webshop/scss/style-webshop-noordoostpolder-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-noordoostpolder-vars.scss
@@ -37,9 +37,7 @@ $primaryColorLight: #fd5392;
     --bc: #de286b;
 
     // background color
-    --bg: #de286b;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #fff;
