--- a/react/assets/forus-webshop/scss/style-webshop-potjeswijzer-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-potjeswijzer-vars.scss
@@ -37,9 +37,7 @@ $primaryColorLight: #b9cb18;
     --bc: #000;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: #fff;
+    --body-background: #fff;
 
     // footer color
     --footer_background_color: #4990b5;
