--- a/react/assets/forus-webshop/scss/style-webshop-vergoedingen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-vergoedingen-vars.scss
@@ -58,9 +58,7 @@ $primaryColorLight: #2f7f6b;
     --bc: #000;
 
     // background color
-    --bg: #f7f9fc;
-
-    --bg_2: #ffffff;
+    --body-background: #fff;
 
     // footer color
     --footer_background_color: #3a3a3a;
