--- a/react/assets/forus-webshop/scss/style-webshop-wadenheuvel-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-wadenheuvel-vars.scss
@@ -37,9 +37,7 @@ $primaryColorLight: #2a2a7f;
     --bc: #003b3b;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // text formatting
     --tf: inherit;
