--- a/react/assets/forus-webshop/scss/style-webshop-winterswijk-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-winterswijk-vars.scss
@@ -37,9 +37,7 @@ $primaryColorLight: #0c6dcb;
     --bc: #0c6dcb;
 
     // background color
-    --bg: #ececec;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_color: #4e4d40;
