--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -135,6 +135,7 @@
 @import '_common/sections/blocks/block-cookie-banner';
 @import '_common/sections/blocks/block-lang-control';
 @import '_common/sections/blocks/block-reservation-address';
+@import '_common/sections/blocks/block-banner';
 
 @import '_common/modals/modal-file-preview';
 @import '_common/modals/modal-photo-cropper';
