--- a/react/assets/forus-platform/scss/_common/dashboard.scss
+++ b/react/assets/forus-platform/scss/_common/dashboard.scss
@@ -51,7 +51,6 @@
     @import 'blocks/block-app_links.scss';
     @import 'blocks/block-timeframe.scss';
     @import 'blocks/block-financial-dashboard.scss';
-    @import 'blocks/block-banner-picker.scss';
     @import 'blocks/block-markdownable.scss';
     @import 'blocks/block-markdown.scss';
     @import 'blocks/block-switch-table.scss';
@@ -87,6 +86,8 @@
     @import 'blocks/block-toast.scss';
 }
 
+@import 'blocks/block-banner-editor';
+@import 'blocks/block-color-picker';
 @import 'blocks/block-info-box.scss';
 @import 'blocks/block-fund-amounts.scss';
 @import 'blocks/block-info-with-icon.scss';
