--- a/react/assets/forus-webshop/scss/style-webshop-groningen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-groningen-vars.scss
@@ -51,9 +51,7 @@ $primaryColorLight: #e60204;
     --bc: #e60003;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #e60004;
