--- a/react/assets/forus-webshop/scss/style-webshop-schagen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-schagen-vars.scss
@@ -46,9 +46,7 @@ $primaryColorLight: #1c8fd7;
     --bc: #000;
 
     // background color
-    --bg: #f7f9fc;
-
-    --bg_2: #ffffff;
+    --body-background: #fff;
 
     // footer color
     --footer_background_color: #306fb3;
