--- a/react/assets/forus-webshop/scss/style-webshop-waalwijk-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-waalwijk-vars.scss
@@ -41,9 +41,7 @@ $primaryColorLight: #2a2a7f;
     --bc: #2a2a7f;
 
     // background color
-    --bg: #fff;
-
-    --bg_2: none;
+    --body-background: none;
 
     // footer color
     --footer_background_color: #2f2d80;
