--- a/react/assets/forus-platform/scss/_common/components/tables.scss
+++ b/react/assets/forus-platform/scss/_common/components/tables.scss
@@ -414,6 +414,10 @@
                     &.td-media-round {
                         border-radius: 70px;
                     }
+
+                    &.td-media-borderless {
+                        border: none;
+                    }
                 }
 
                 .td-boolean {
