mfa setup and deactivate modal selected provider, textual and visual fixes

--- a/react/assets/forus-platform/scss/_common/components/modals.scss
+++ b/react/assets/forus-platform/scss/_common/components/modals.scss
@@ -891,6 +891,10 @@
             .phone-control {
                 margin-bottom: 10px;
             }
+
+            .modal-text {
+                text-align: left;
+            }
         }
     }
 
