--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -34,6 +34,7 @@
 @import '_common/components/skiplinks';
 @import '_common/components/table';
 @import '_common/components/table-pagination';
+@import '_common/components/frame-director';
 
 // SECTIONS
 @import '_common/sections/faq';
