--- a/react/assets/forus-webshop/scss/_common/components/_form.scss
+++ b/react/assets/forus-webshop/scss/_common/components/_form.scss
@@ -1130,6 +1130,7 @@
             flex-direction: column;
             justify-content: center;
             cursor: pointer;
+            z-index: 1;
 
             .mdi {
                 color: #004d93;
