add custom implementation styles for lang selector

--- a/react/assets/forus-webshop/scss/style-webshop-hartvanwestbrabant.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-hartvanwestbrabant.scss
@@ -3,3 +3,6 @@
 
 // COMPONENTS
 @import "hartvanwestbrabant/components/buttons";
+
+// BLOCKS
+@import "hartvanwestbrabant/sections/blocks/block-lang-control";
