--- a/react/assets/forus-webshop/scss/_common/sections/blocks/block-banner.scss
+++ b/react/assets/forus-webshop/scss/_common/sections/blocks/block-banner.scss
@@ -307,6 +307,12 @@
                 z-index: 1;
             }
         }
+
+        &.block-banner-background-mobile-hide {
+            .banner-background {
+                display: none;
+            }
+        }
     }
 
     @media screen and (max-width: 420px) {
