update implementations css variables, minor fixes and feedback

--- a/react/assets/forus-webshop/scss/includes/blocks/block-markdown.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-markdown.scss
@@ -44,6 +44,10 @@
         margin-bottom: 15px;
         text-align: left;
         font: inherit;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     ul,
