--- a/react/assets/forus-webshop/scss/includes/blocks/block-pre-check-banner.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-pre-check-banner.scss
@@ -4,7 +4,7 @@
     border-radius: var(--border-radius);
     background: #fff;
     overflow: hidden;
-    margin: 0 0 30px;
+    margin: 0 0;
 
     .pre-check-banner-media {
         display: flex;
