--- a/react/assets/forus-webshop/scss/includes/layout/_footer.scss
+++ b/react/assets/forus-webshop/scss/includes/layout/_footer.scss
@@ -156,7 +156,7 @@
             color: var(--footer_color_link);
 
             &:hover {
-                color: var(--footer_color_link_hover);
+                color: var(--footer_color_link);
             }
         }
     }
