--- a/react/assets/forus-platform/scss/_common/blocks/block-markdown.scss
+++ b/react/assets/forus-platform/scss/_common/blocks/block-markdown.scss
@@ -39,6 +39,10 @@
         margin-bottom: 15px;
         text-align: left;
         font: inherit;
+
+        &:last-child {
+            margin-bottom: 0;
+        }
     }
 
     ul,
