--- a/react/assets/forus-webshop/scss/style-webshop-goereeoverflakkee-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-goereeoverflakkee-vars.scss
@@ -6,17 +6,68 @@ $primaryColor: #627c18;
 $primaryColorLight: #627c18;
 
 :root {
+    --zoom: 100%;
+    --zoom-mobile: 100%;
+
+    --border-color: #e5e5e5;
+    --border-radius: 7px;
+    --box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
+
+    --color-primary: #{$primaryColor};
+    --color-primary-light: #{$primaryColorLight};
+
+    --color-default: #305dfb;
+    --color-default-light: #4c74ff;
+
+    --color-danger: #e63b3b;
+
     // navbar
+    --navbar-box-shadow: none;
+
+    --navbar-menu-gap: 22px;
+    --navbar-menu-order: 1;
     --navbar-menu-background: #f3f8fa;
+
+    --navbar-search-gap: 20px;
+    --navbar-search-order: 2;
+    --navbar-search-padding: 20px 0px;
+    --navbar-search-background: #ffffff;
+    --navbar-search-border-bottom: 1px solid var(--border-color);
+
+    --navbar-menu-item-font: 400 18px/21px var(--base-font);
     --navbar-menu-item-color: #08749b;
     --navbar-menu-item-color-hover: #08749b;
-    --navbar-search-padding: 20px 0px;
+    --navbar-menu-item-padding: 16px 0;
+    --navbar-menu-item-background: transparent;
+    --navbar-menu-item-background-hover: transparent;
+
+    --navbar-menu-separator-opacity: 0.25;
+    --navbar-menu-separator-background: var(--navbar-menu-item-color);
+
+    --navbar-auth-font: 600 16px/20px var(--base-font);
+
     --navbar-logo-height: 50px;
 
+    // Nav item line position
+    --navbar-menu-item-line-position-top: 0;
+    --navbar-menu-item-line-position-bottom: auto;
+
+    // wrapper
+    --wrapper-width: calc(1280px + 50px);
+    --wrapper-padding: 20px;
+
+    // Outline
+    --focus-outline: 2px solid #315efd;
+    --focus-outline-offset: 2px;
+    --focus-box-shadow: 0 0 0 3px white;
+
     // navbar (auth) (default button)
+    --tc-auth-menu: #305dfb;
     --tc-auth-btn: #fff;
     --btn-auth-bg: #627c18;
     --btn-auth-border: transparent;
+    --auth-avater-bg: #305dfb;
+    --auth-avater-svg: #fff;
 
     // navbar (start modal primary)
     --tc-start-btn: #fff;
@@ -24,20 +75,31 @@ $primaryColorLight: #627c18;
     --btn-start-btn: #305dfb;
     --btn-start-border: transparent;
 
+    // header background
+    --bg-values: url('../img/splash-top-b.png') no-repeat 100% 0;
+
+    // Header banner
+    --header-banner-pane-banner-padding: 50px 0;
+    --header-banner-pane-banner-max-width: 650px;
+    --header-banner-pane-banner-background: transparent;
+    --header-banner-pane-banner-border-color: initial;
+    --header-banner-pane-banner-border-radius: initial;
+
     // base font
     --base-font: Roboto, Verdana, arial;
-
-    // heading font
-    --heading-font-family: var(--base-font);
-    --heading-font: 500 34px/50px var(--heading-font-family);
-    --heading-color: #08749b;
-    --heading-pane-font: 500 24px/36px var(--heading-font-family);
 
     // text color
     --tc: #1d1e20;
     --htc: #08749b;
     --tc-var: inherit;
     --tc-link: inherit;
+    --tc-muted: #595959;
+
+    // heading font
+    --heading-font-family: var(--base-font);
+    --heading-font: 500 34px/50px var(--heading-font-family);
+    --heading-color: #08749b;
+    --heading-pane-font: 500 24px/36px var(--heading-font-family);
 
     // base color
     --bc: #627c18;
@@ -46,10 +108,15 @@ $primaryColorLight: #627c18;
     --body-background: #fff;
 
     // footer color
+    --footer_padding: 0;
     --footer_background: transparent;
     --footer_color: #fff;
     --footer_color_link: #fff;
-    --footer_color_link_hover: #fff;
+
+    --footer_social_color: var(--footer_color);
+    --footer_social_background: transparent;
+    --footer_social_border_color: var(--footer_color);
+    --footer_social_border_radius: var(--border-radius);
 
     --footer-copyright-color: var(--footer_color_link);
     --footer-copyright-font: 500 17px/25px var(--base-font);
@@ -59,11 +126,6 @@ $primaryColorLight: #627c18;
 
     // not displayed
     --footer_display: none;
-
-    // Vouchers
-    --vouchers-label-color: #646f79;
-    --vouchers-value-color: var(--tc);
-    --vouchers-organization-color: var(--tc);
 
     // product image
     --product-image-padding: 10px 0 0 10px;
@@ -81,53 +143,156 @@ $primaryColorLight: #627c18;
     --form-label-color: #2d3748;
     --form-label-font: 500 13px/20px var(--base-font);
 
-    // placeholder text color
-    --border-color: #e5e5e5;
-    --border-radius: 7px;
-    --box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.05);
-
-    --color-primary: #{$primaryColor};
-    --color-primary-light: #{$primaryColorLight};
-
-    --color-default: #305dfb;
-    --color-default-light: #4c74ff;
-
+    // Search bar
     --color-search-icon-medium: #{$primaryColor};
     --color-search-icon-dark: #{darken($primaryColor, 10%)};
     --color-search-icon-light: #{lighten($primaryColor, 25%)};
 
+    --search-bar-point-color: #ececec;
+    --search-bar-point-radius: 0px;
+
+    --search-bar-input-radius: var(--border-radius);
+    --search-bar-input-border: 1px solid var(--form-control-border-color);
+    --search-bar-input-background: #fff;
+    --search-bar-input-icon-color: #666666;
+
+    --search-bar-label-top: -7px;
+    --search-bar-label-left: 16px;
+    --search-bar-label-padding: 4px;
+    --search-bar-label-background: #ffffff;
+
+    // Dropdowns
+    --dropdown-item-font: 500 13px/20px var(--base-font);
+    --dropdown-item-color: #282b39;
+    --dropdown-item-background: #ffffff;
+    --dropdown-item-hover-color: #000000;
+    --dropdown-item-hover-background: #e5e5e5;
+
+    // Paginator
+    --paginator-border-radius: var(--border-radius);
+    --paginator-button-color: #282b39;
+    --paginator-button-border: #9e9e9e;
+    --paginator-button-background: #fff;
+    --paginator-button-hover-color: #fff;
+    --paginator-button-hover-background: #535561;
+    --paginator-button-active-color: #fff;
+    --paginator-button-active-background: #292b39;
+    --paginator-button-disabled-color: #535561;
+    --paginator-button-disabled-border: #e5e5e5;
+    --paginator-button-disabled-background: #f5f5f5;
+
+    // Labels
+    --label-default-color: #fff;
+    --label-default-background: #595959;
+
+    --label-primary-color: #fff;
+    --label-primary-background: var(--color-primary);
+
+    --label-danger-color: #030304;
+    --label-danger-background: #d38c87;
+
+    --label-success-color: #030304;
+    --label-success-background: #9bbfa1;
+
+    // Label sets
+    --label-set-border-radius: var(--border-radius);
+    --label-set-border-color: #9e9e9e;
+    --label-set-color: #272525;
+    --label-set-background: #ffffff;
+    --label-set-active-color: #ffffff;
+    --label-set-active-background: var(--color-primary);
+    --label-set-hover-color: #ffffff;
+    --label-set-hover-background: #{rgba($primaryColor, 0.8)};
+    --label-set-focus-color: #272525;
+    --label-set-focus-background: #f4f5f7;
+    --label-set-focus-border-color: #9e9e9e;
+
     // Buttons
     --button-font: 700 18px/24px var(--base-font);
     --button-color: #282b39;
+    --button-shadow: none;
+    --button-decoration: none;
     --button-border-radius: calc(var(--border-radius) * 0.75);
-
+    --button-hover-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
+    --button-hover-decoration: none;
     --button-disabled-color: #616161;
     --button-disabled-background: #e5e5e5;
 
-    // Label sets
-    --label-set-hover-background: #{rgba($primaryColor, 0.8)};
+    --button-primary-color: #fff;
+    --button-primary-border: 1px solid var(--color-primary);
+    --button-primary-decoration: none;
+    --button-primary-background: var(--color-primary);
+    --button-primary-hover-color: #fff;
+    --button-primary-hover-border: 1px solid var(--color-primary-light);
+    --button-primary-hover-decoration: none;
+    --button-primary-hover-background: var(--color-primary-light);
+
+    --button-primary-outline-color: var(--color-primary);
+    --button-primary-outline-border: 1px solid var(--color-primary);
+    --button-primary-outline-decoration: none;
+    --button-primary-outline-background: transparent;
+    --button-primary-outline-hover-color: #fff;
+    --button-primary-outline-hover-border: 1px solid var(--color-primary);
+    --button-primary-outline-hover-decoration: none;
+    --button-primary-outline-hover-background: var(--color-primary);
+
+    --button-read_more-color: var(--button-primary-color);
+    --button-read_more-border: var(--button-primary-border);
+    --button-read_more-decoration: var(--button-primary-decoration);
+    --button-read_more-background: var(--button-primary-background);
+    --button-read_more-hover-color: var(--button-primary-hover-color);
+    --button-read_more-hover-border: var(--button-primary-hover-border);
+    --button-read_more-hover-decoration: var(--button-primary-hover-decoration);
+    --button-read_more-hover-background: var(--button-primary-hover-background);
 
     // Sign up
     --sign_up_accent_color: #305dfb;
     --sign_up_accent_color_light: #bdcbff;
     --sign_up_link_color: #e60003;
-    --sign_up_step_btns_color: #305dfb;
+    --sign_up_step_btns_color: var(--tc);
     --sign_up_digid_btn_bkg: #e1e7ff;
     --sign_up_digid_btn_text: #4b71ff;
     --sign_up_digid_btn_border: none;
     --sign_up_digid_btn_border_radius: 5px;
+    --sign_up_loader_icon_color: #282b39;
 
     //- Showcase
+    --showcase-aside-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.06);
+    --showcase-aside-padding: 20px;
+    --showcase-aside-background: #fff;
+    --showcase-aside-border: 1px solid #e5e5e5;
+    --showcase-aside-border-radius: var(--border-radius);
+
+    --showcase-item-shadow: var(--showcase-aside-shadow);
+    --showcase-item-background: var(--showcase-aside-background);
+    --showcase-item-border: var(--showcase-aside-border);
+    --showcase-item-border-radius: var(--showcase-aside-border-radius);
+    --showcase-item-hover-shadow: 2px 8px 14px 0px rgba(0, 0, 0, 0.1);
+
+    --showcase-aside-button-color: var(--color-primary);
+    --showcase-aside-button-border: 1px solid var(--color-primary);
+    --showcase-aside-button-background: transparent;
+    --showcase-aside-button-hover-color: #fff;
+    --showcase-aside-button-hover-border: 1px solid var(--color-primary);
+    --showcase-aside-button-hover-background: var(--color-primary);
+
+    --showcase-fullscreen-bottom-offset: 115px;
+
+    --showcase-title-font: 600 18px/30px var(--heading-font-family);
+    --showcase-title-color: var(--tc);
     --showcase-title-count-color: #0b0e12;
     --showcase-title-count-background: #e5e5e5;
-
-    // Nav item line position
-    --navbar-menu-item-line-position-top: 0;
-    --navbar-menu-item-line-position-bottom: auto;
+    --showcase-title-count-border-radius: calc(var(--border-radius) / 2);
 
     // Breadcrumbs
+    --breadcrumb-size: 16px;
     --breadcrumb-color: var(--htc);
     --breadcrumb-color-active: #2d3748;
+    --breadcrumb-padding: 20px;
+
+    // Loader
+    --loader-background: #f5f5f5;
+    --loader-color: var(--color-primary);
 
     // Profile
     --profile-menu-item-gap: 0;
@@ -143,8 +308,23 @@ $primaryColorLight: #627c18;
     --profile-menu-item-hover-border-color: transparent;
     --profile-menu-item-hover-border-radius: 0px;
 
+    // Vouchers
+    --vouchers-label-color: #646f79;
+    --vouchers-value-color: var(--tc);
+    --vouchers-organization-color: var(--tc);
+
+    // Voucher card
+    --voucher-card-action-color: var(--color-primary);
+    --voucher-card-action-background: transparent;
+    --voucher-card-action-border-color: var(--color-primary);
+    --voucher-card-action-border-radius: 0px;
+    --voucher-card-action-hover-color: #fff;
+    --voucher-card-action-hover-background: var(--color-primary);
+    --voucher-card-action-hover-border-color: var(--color-primary);
+
     // Products
     --products-title-color: #2e82a4;
+    --products-title-hover-color: var(--tc);
     --products-text-color: #2d3748;
 
     // Product
@@ -161,19 +341,6 @@ $primaryColorLight: #627c18;
     --map-title-color: #0b0e12;
     --map-title-font: 400 52px/72px var(--base-font);
 
-
-    // CMS funds
-    --cms-funds-title-font: 400 24px/36px var(--base-font);
-    --cms-funds-title-color: var(--htc);
-    --cms-funds-label-font-size: 11px;
-    --cms-funds-label-background: var(--color-primary);
-
-    --cms-funds-compact-title-font: 500 32px/48px var(--base-font);
-    --cms-funds-compact-title-color: var(--htc);
-
-    --cms-funds-link-color: #08749b;
-    --cms-funds-link-font: 600 18px/20px var(--base-font);
-
     // Sections
     --section-padding: 0 0 30px;
     --section-background: transparent;
@@ -189,6 +356,8 @@ $primaryColorLight: #627c18;
     --section-faq-background: var(--section-background);
     --section-footer-padding: 30px 0;
     --section-footer-background: #08749b;
+    --section-pre-check-padding: 0 0 30px;
+    --section-pre-check-background: var(--section-background);
     --section-profile-padding: var(--section-padding);
     --section-profile-background: var(--section-background);
     --section-products-padding: var(--section-padding);
@@ -197,4 +366,24 @@ $primaryColorLight: #627c18;
     --section-breadcrumbs-background: var(--section-background);
     --section-voucher-details-padding: var(--section-padding);
     --section-voucher-details-background: var(--section-background);
+
+    // Search bar
+    --search-result-sidebar-item-active-color: #a80a2d;
+    --search-result-sidebar-item-active-background: #fff;
+
+    // CMS funds
+    --cms-funds-title-font: 400 24px/36px var(--base-font);
+    --cms-funds-title-color: var(--htc);
+    --cms-funds-label-font-size: 11px;
+    --cms-funds-label-background: var(--color-primary);
+
+    --cms-funds-compact-title-font: 500 32px/48px var(--base-font);
+    --cms-funds-compact-title-color: var(--htc);
+
+    --cms-funds-link-color: #08749b;
+    --cms-funds-link-font: 600 18px/20px var(--base-font);
+
+    // Section order
+    --order-page-voucher-map: 0;
+    --order-page-voucher-products: 0;
 }
