--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -43,6 +43,7 @@
 @import 'includes/sections/section-footer';
 @import 'includes/sections/section-profile';
 @import 'includes/sections/section-products';
+@import 'includes/sections/section-pre-check';
 @import 'includes/sections/section-voucher-details';
 
 // BLOCKS
