--- a/react/assets/forus-webshop/scss/includes/blocks/block-empty.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-empty.scss
@@ -4,7 +4,7 @@
     border-radius: var(--border-radius);
     box-shadow: 0 5px 30px rgba(0, 0, 0, 0.05);
     padding: 30px 30px;
-    margin: 0 0 30px;
+    margin: 0 0;
     text-align: center;
 
     .block-icon {
@@ -34,13 +34,13 @@
     .block-title {
         font: 700 22px/28px var(--base-font);
         color: #282b39;
-        margin: 0px 0px 10px;
+        margin: 0 0 15px;
     }
 
     .block-description {
         font: 700 14px/20px var(--base-font);
         color: #646f79;
-        margin: 0px 0px 35px;
+        margin: 0 0 35px;
 
         &:last-child {
             margin-bottom: 0;
@@ -57,9 +57,8 @@
             font-size: 1.3em;
             float: right;
             margin-left: 5px;
-            transition: color .4s;
+            transition: color 0.4s;
             line-height: 22px;
-            float: right;
         }
 
         &:hover {
@@ -70,10 +69,8 @@
     }
 
     @media screen and (max-width: 1700px) {
-        &.block-empty {
-            .block-title {
-                font: 700 20px/26px var(--base-font);
-            }
+        .block-title {
+            font: 700 18px/26px var(--base-font);
         }
     }
 }
