--- a/react/assets/forus-webshop/scss/includes/blocks/block-profile.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-profile.scss
@@ -22,6 +22,7 @@
             display: flex;
             flex-direction: column;
             gap: var(--profile-menu-item-gap);
+            margin: 0 0 30px;
 
             .profile-menu-item {
                 padding: 14px 19px;
