--- a/react/assets/forus-webshop/scss/includes/sections/section-footer.scss
+++ b/react/assets/forus-webshop/scss/includes/sections/section-footer.scss
@@ -5,6 +5,6 @@
     background: var(--section-footer-background);
 
     @media screen and (max-width: 1000px) {
-        padding: 0;
+        padding: 30px 0;
     }
 }
