fix faq-block width on mobile

--- a/react/assets/forus-webshop/scss/includes/blocks/block-cms-funds.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-cms-funds.scss
@@ -188,9 +188,10 @@
     }
 
     @media screen and (max-width: 1000px) {
+        gap: 30px;
+
         .fund-item {
             padding: 0 0 30px;
-            margin: 0 0 30px;
             flex-direction: column;
 
             .fund-media {
