--- a/react/assets/forus-webshop/scss/style-webshop-schagen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-schagen-vars.scss
@@ -356,7 +356,7 @@ $primaryColorLight: #1c8fd7;
     --section-cms-background: var(--section-background);
     --section-map-padding: var(--section-padding);
     --section-map-background: var(--section-background);
-    --section-faq-padding: var(--section-padding);
+    --section-faq-padding: 30px 0;
     --section-faq-background: var(--section-background);
     --section-footer-padding: 35px 0;
     --section-footer-background: #306fb3;
