--- a/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-faq.scss
@@ -12,6 +12,7 @@
         position: relative;
         box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.1);
         transition: 0.4s;
+        max-width: 100%;
         width: var(--faq-width);
 
         .faq-item-header {
@@ -155,12 +156,12 @@
     }
 
     @media screen and (max-width: 1000px) {
-        padding: 0;
         max-width: 100%;
         width: 600px;
 
         .faq-item {
             .faq-item-header {
+                padding: 15px 45px 15px 20px;
                 font: 500 14px var(--base-font);
             }
 
