--- a/react/assets/forus-webshop/scss/style-webshop-geertruidenberg-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-geertruidenberg-vars.scss
@@ -352,7 +352,7 @@ $primaryColorLight: #ee8016;
     --section-cms-background: var(--section-background);
     --section-map-padding: var(--section-padding);
     --section-map-background: var(--section-background);
-    --section-faq-padding: var(--section-padding);
+    --section-faq-padding: 30px 0;
     --section-faq-background: var(--section-background);
     --section-footer-padding: 50px 0;
     --section-footer-background: #ee8016 url(./assets/img/header-frame-after.svg);
