--- a/react/assets/forus-webshop/scss/style-webshop-potjeswijzer-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-potjeswijzer-vars.scss
@@ -351,7 +351,7 @@ $primaryColorLight: #b9cb18;
     --section-cms-background: var(--section-background);
     --section-map-padding: var(--section-padding);
     --section-map-background: var(--section-background);
-    --section-faq-padding: var(--section-padding);
+    --section-faq-padding: 30px 0;
     --section-faq-background: var(--section-background);
     --section-footer-padding: 35px 0;
     --section-footer-background: #4990b5;
