--- a/react/assets/forus-webshop/scss/style-webshop-vergoedingen-vars.scss
+++ b/react/assets/forus-webshop/scss/style-webshop-vergoedingen-vars.scss
@@ -453,7 +453,7 @@ $primaryColorLight: #2f7f6b;
     --section-cms-background: var(--section-background);
     --section-map-padding: 30px 0;
     --section-map-background: var(--section-background);
-    --section-faq-padding: var(--section-padding);
+    --section-faq-padding: 30px 0;
     --section-faq-background: var(--section-background);
     --section-footer-padding: 35px 0;
     --section-footer-background: #3a3a3a;
