--- a/react/assets/forus-webshop/scss/includes/blocks/block-products.scss
+++ b/react/assets/forus-webshop/scss/includes/blocks/block-products.scss
@@ -20,7 +20,7 @@
         border-radius: var(--showcase-item-border-radius);
         box-shadow: var(--showcase-item-shadow);
         border: var(--showcase-item-border);
-        transition: box-shadow .4s;
+        transition: box-shadow 0.4s;
         overflow: hidden;
 
         .block-bookmark-toggle {
@@ -52,6 +52,7 @@
                 display: flex;
                 flex: 1 1 auto;
                 padding: var(--products-content-padding);
+                border-bottom: 1px solid var(--border-color);
                 flex-direction: column;
                 gap: 5px;
                 min-width: 0;
@@ -71,16 +72,48 @@
                 .product-title {
                     font: 700 17px/24px var(--base-font);
                     color: var(--products-title-color);
-                    transition: .4s color;
+                    transition: 0.4s color;
                 }
 
                 .product-subtitle {
                     font: 400 14px/20px var(--base-font);
                 }
+            }
+
+            .product-actions {
+                background-color: #fbfbfb;
+                padding: 15px 20px;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
 
                 .product-price {
                     font: 700 18px/24px var(--base-font);
-                    padding-top: 10px;
+                }
+
+                .product-icons {
+                    display: flex;
+                    flex-direction: row;
+                    align-items: center;
+                    gap: 10px;
+
+                    .product-icons-item {
+                        display: flex;
+                        flex: 0 0 18px;
+                        text-align: center;
+
+                        .mdi {
+                            font-size: 18px;
+                            line-height: 18px;
+                        }
+
+                        img {
+                            display: block;
+                            width: 18px;
+                            height: 18px;
+                        }
+                    }
                 }
             }
         }
