--- a/react/assets/forus-webshop/scss/includes/components/_form.scss
+++ b/react/assets/forus-webshop/scss/includes/components/_form.scss
@@ -83,8 +83,8 @@
         font: var(--form-font);
         line-height: 20px;
         transition:
-            background-color .4s ease,
-            border .4s ease;
+            background-color 0.4s ease,
+            border 0.4s ease;
         appearance: none;
 
         &[disabled] {
@@ -239,7 +239,7 @@
                 transform: translate(0, -50%);
                 opacity: 1;
                 pointer-events: none;
-                transition: opacity .4s;
+                transition: opacity 0.4s;
 
                 .mdi {
                     color: #ccd0e0;
@@ -292,7 +292,9 @@
                     calc(calc(calc(var(--option-height) - 20px) / 2) - 1px);
                 border-bottom: 1px solid whitesmoke;
                 cursor: pointer;
-                transition: background-color .4s, color .4s;
+                transition:
+                    background-color 0.4s,
+                    color 0.4s;
                 height: var(--option-height);
                 font: var(--dropdown-item-font);
                 line-height: 20px;
@@ -547,6 +549,51 @@
         }
     }
 
+    .range-control {
+        display: block;
+        position: relative;
+        padding-bottom: 25px;
+
+        .horizontal-slider {
+            position: relative;
+            border-radius: var(--border-radius);
+            height: 24px;
+        }
+
+        .horizontal-slider-track {
+            top: 10px;
+            bottom: 10px;
+            border-radius: 999px;
+            background: #c0c5d4;
+
+            &.horizontal-slider-track-1 {
+                background: var(--color-primary);
+            }
+        }
+
+        .horizontal-slider-thumb {
+            line-height: 25px;
+            text-align: center;
+            background-color: rgb(0, 0, 0);
+            border-radius: 50%;
+            cursor: grab;
+            display: block;
+            height: 24px;
+            width: 24px;
+            background: var(--color-primary);
+            border: 4px solid #fff;
+
+            .horizontal-slider-thumb-text {
+                position: absolute;
+                white-space: nowrap;
+                left: 50%;
+                top: 100%;
+                transform: translate(-50%, 7px);
+                font: 700 14px/20px var(--base-font)
+            }
+        }
+    }
+
     .form-group {
         margin-bottom: 10px;
         @include cf();
@@ -694,7 +741,7 @@
                 line-height: 38px;
                 position: relative;
                 z-index: 1;
-                transition: color .4s;
+                transition: color 0.4s;
 
                 &:before {
                     content: '';
@@ -708,7 +755,7 @@
                     transform: translate(-50%, -50%);
                     z-index: -1;
                     border-radius: 20px;
-                    transition: background .4s;
+                    transition: background 0.4s;
                 }
 
                 &:hover {
@@ -793,7 +840,9 @@
                 top: 50%;
                 transform: translate3d(-50%, -50%, 0);
                 font-size: 18px;
-                transition: color .4s, background .4s;
+                transition:
+                    color 0.4s,
+                    background 0.4s;
                 opacity: 0;
             }
         }
@@ -845,7 +894,10 @@
             float: left;
             border-radius: 20px;
             margin-left: -30px;
-            transition: color .4s, background .4s, border .4s;
+            transition:
+                color 0.4s,
+                background 0.4s,
+                border 0.4s;
 
             &:after {
                 content: '';
@@ -985,7 +1037,7 @@
                 border: 1px solid #ddd;
                 height: 20px;
                 position: relative;
-                transition: all .4s ease-in-out;
+                transition: all 0.4s ease-in-out;
 
                 .toggle-input-dot {
                     width: 24px;
@@ -1001,7 +1053,7 @@
                     font-size: 18px;
                     transform: translate(0, -50%);
                     color: #fefefe;
-                    transition: all .4s ease-in-out;
+                    transition: all 0.4s ease-in-out;
                     position: relative;
 
                     .icon-disabled {
@@ -1042,7 +1094,7 @@
                 a {
                     font: inherit;
                     color: $colorPrimary;
-                    transition: color .4s;
+                    transition: color 0.4s;
 
                     &:hover {
                         color: var(--bc);
@@ -1228,6 +1280,10 @@
         .form-control:not([type='radio']):not([type='checkbox']).form-control-fancy {
             padding: 8px 15px;
             font: 500 13px/24px var(--base-font);
+
+            &[type='number'] {
+                padding-right: 0;
+            }
         }
 
         ::-webkit-input-placeholder {
