--- a/react/assets/forus-webshop/scss/webshop.scss
+++ b/react/assets/forus-webshop/scss/webshop.scss
@@ -128,6 +128,7 @@
 @import 'includes/blocks/block-fund-requests';
 @import 'includes/blocks/block-products';
 @import 'includes/blocks/block-products-list';
+@import 'includes/blocks/block-products-icons-info';
 @import 'includes/blocks/block-pre-check-banner';
 @import 'includes/blocks/block-fund-pre-check';
 @import 'includes/blocks/block-fund-pre-check-result';
